<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/list_grad"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.iroid.tarbinol.ui.ExecutiveNameActivity"
    android:scrollbars="vertical"
    tools:showIn="@layout/app_bar_executive_name">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginBottom="@dimen/margin_large">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_your_route"
            android:textColor="@color/white"
            android:textSize="@dimen/font_very_large" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_normal"
        android:clickable="true">

        <TextView
            android:id="@+id/tvMonday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/monday"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/mondayLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/palarivattom"
            android:textSize="@dimen/font_tiny"
            android:layout_marginTop="@dimen/spacing_small"
            android:drawableLeft="@drawable/ic_placeholder"
            android:drawablePadding="@dimen/spacing_tiny"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_normal"
        android:clickable="true">

        <TextView
            android:id="@+id/tvTuesday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tuesday"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/tuesdayLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/palarivattom"
            android:textSize="@dimen/font_tiny"
            android:layout_marginTop="@dimen/spacing_small"
            android:drawableLeft="@drawable/ic_placeholder"
            android:drawablePadding="@dimen/spacing_tiny"
            android:textColor="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_normal"
        android:clickable="true">

        <TextView
            android:id="@+id/tvWednsday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/wednsday"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/wednesdayLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/palarivattom"
            android:textSize="@dimen/font_tiny"
            android:layout_marginTop="@dimen/spacing_small"
            android:drawableLeft="@drawable/ic_placeholder"
            android:drawablePadding="@dimen/spacing_tiny"
            android:textColor="@color/white" />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_normal"
        android:clickable="true">

        <TextView
            android:id="@+id/tvThursday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/thursday"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/thursdayLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/palarivattom"
            android:textSize="@dimen/font_tiny"
            android:layout_marginTop="@dimen/spacing_small"
            android:drawableLeft="@drawable/ic_placeholder"
            android:drawablePadding="@dimen/spacing_tiny"
            android:textColor="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_normal"
        android:clickable="true">

        <TextView
            android:id="@+id/tvFriday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/friday"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/fridayLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/palarivattom"
            android:textSize="@dimen/font_tiny"
            android:layout_marginTop="@dimen/spacing_small"
            android:drawableLeft="@drawable/ic_placeholder"
            android:drawablePadding="@dimen/spacing_tiny"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_normal"
        android:clickable="true">

        <TextView
            android:id="@+id/tvSaturday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/saturdayLocal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/palarivattom"
            android:textSize="@dimen/font_tiny"
            android:layout_marginTop="@dimen/spacing_small"
            android:drawableLeft="@drawable/ic_placeholder"
            android:drawablePadding="@dimen/spacing_tiny"
            android:textColor="@color/white" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingStart="@dimen/margin_extra_large"
        android:layout_marginBottom="@dimen/margin_normal"
        android:clickable="true">

        <TextView
            android:id="@+id/tvOther"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/other"
            android:textColor="@color/white" />


    </LinearLayout>


</LinearLayout>
